@@ -9,6 +9,7 @@ import java.io.IOException;
 import java.lang.reflect.Type;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -17,6 +18,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextDecoration;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
+import net.kyori.adventure.title.Title;
 import org.bukkit.Bukkit;
 import org.bukkit.Color;
 import org.bukkit.GameMode;
@@ -26,7 +32,6 @@ import org.bukkit.Particle;
 import org.bukkit.Sound;
 import org.bukkit.SoundCategory;
 import org.bukkit.World;
-import org.bukkit.attribute.Attribute;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.ItemDisplay;
 import org.bukkit.entity.Player;
@@ -139,7 +144,7 @@ public class BeaconManager {
     private void forceLoadBeaconChunks() {
         int chunksLoaded = 0;
 
-        for(BeaconSite beacon : this.beacons.values()) {
+        for (BeaconSite beacon : this.beacons.values()) {
             Location location = beacon.getLocation();
 
             if (location != null && location.getWorld() != null && !location.getWorld().isChunkLoaded(location.getBlockX() >> 4, location.getBlockZ() >> 4)) {
@@ -166,7 +171,7 @@ public class BeaconManager {
             if (timePassed >= 500L) {
                 boolean cooldownsChanged = false;
 
-                for(BeaconSite beacon : this.beacons.values()) {
+                for (BeaconSite beacon : this.beacons.values()) {
                     if (beacon.isOnConversionCooldown()) {
                         beacon.reduceCooldown(timePassed);
                         cooldownsChanged = true;
@@ -188,7 +193,7 @@ public class BeaconManager {
     public void clearAllBeaconCooldownsForNewSession() {
         int clearedBeacons = 0;
 
-        for(BeaconSite beacon : this.beacons.values()) {
+        for (BeaconSite beacon : this.beacons.values()) {
             if (beacon.getConversionCooldownUntil() > 0L) {
                 beacon.setConversionCooldownUntil(0L);
                 ++clearedBeacons;
@@ -222,7 +227,7 @@ public class BeaconManager {
      * Apply regeneration to nearby humans from a holy beacon.
      */
     private void applyHolyRegeneration() {
-        for(Player player : this.plugin.getServer().getOnlinePlayers()) {
+        for (Player player : this.plugin.getServer().getOnlinePlayers()) {
             if (this.plugin.getVampireManager().isHuman(player)) {
                 BeaconSite nearestHolyBeacon = this.getNearestHolyBeacon(player.getLocation());
 
@@ -231,7 +236,7 @@ public class BeaconManager {
                     player.addPotionEffect(regenEffect);
 
                     if (!player.hasPotionEffect(PotionEffectType.REGENERATION)) {
-                        player.sendMessage("§a§You feel the holy energy rejuvenating you...");
+                        player.sendMessage(Component.text("You feel the holy energy rejuvenating you...", NamedTextColor.GREEN));
                     }
                 }
             }
@@ -252,11 +257,11 @@ public class BeaconManager {
             String expectedCMD = this.getCustomModelDataForState(beacon.getState());
 
             if (meta != null) {
-                meta.setDisplayName("§6Beacon: " + beacon.getName());
+                meta.customName(Component.text("Beacon: " + beacon.getName(), NamedTextColor.GOLD));
                 pumpkinItem.setItemMeta(meta);
             }
 
-            pumpkinItem.setData(DataComponentTypes.CUSTOM_MODEL_DATA, (CustomModelData)CustomModelData.customModelData().addString(expectedCMD).build());
+            pumpkinItem.setData(DataComponentTypes.CUSTOM_MODEL_DATA, CustomModelData.customModelData().addString(expectedCMD).build());
 
             ItemDisplay display = displayLoc.getWorld().spawn(displayLoc, ItemDisplay.class);
             display.setItemStack(pumpkinItem);
@@ -285,11 +290,11 @@ public class BeaconManager {
             String expectedCMD = this.getCustomModelDataForState(beacon.getState());
 
             if (meta != null) {
-                meta.setDisplayName("§6Beacon: " + beacon.getName());
+                meta.customName(Component.text("Beacon: " + beacon.getName(), NamedTextColor.GOLD));
                 pumpkinItem.setItemMeta(meta);
             }
 
-            pumpkinItem.setData(DataComponentTypes.CUSTOM_MODEL_DATA, (CustomModelData)CustomModelData.customModelData().addString(expectedCMD).build());
+            pumpkinItem.setData(DataComponentTypes.CUSTOM_MODEL_DATA, CustomModelData.customModelData().addString(expectedCMD).build());
             display.setItemStack(pumpkinItem);
 
         } else {
@@ -318,7 +323,7 @@ public class BeaconManager {
         } else if (fallbackLocation != null && fallbackLocation.getWorld() != null) {
             int removed = 0;
 
-            for(Entity entity : fallbackLocation.getWorld().getNearbyEntities(fallbackLocation, 5.0, 5.0, 5.0)) {
+            for (Entity entity : fallbackLocation.getWorld().getNearbyEntities(fallbackLocation, 5.0, 5.0, 5.0)) {
                 if (entity instanceof ItemDisplay) {
                     entity.remove();
                     ++removed;
@@ -356,7 +361,7 @@ public class BeaconManager {
         this.beaconDisplays.clear();
 
         this.plugin.getServer().getScheduler().runTaskLater(this.plugin, () -> {
-            for(BeaconSite beacon : this.beacons.values()) {
+            for (BeaconSite beacon : this.beacons.values()) {
                 this.createBeaconDisplay(beacon);
             }
 
@@ -368,7 +373,7 @@ public class BeaconManager {
      * Clear the beacon displays.
      */
     public void cleanupAllDisplays() {
-        for(ItemDisplay display : this.beaconDisplays.values()) {
+        for (ItemDisplay display : this.beaconDisplays.values()) {
             if (display != null && display.isValid()) {
                 display.remove();
             }
@@ -385,11 +390,11 @@ public class BeaconManager {
     private void aggressiveCleanupItemDisplays() {
         int totalRemoved = 0;
 
-        for(BeaconSite beacon : this.beacons.values()) {
+        for (BeaconSite beacon : this.beacons.values()) {
             Location location = beacon.getLocation();
 
             if (location != null && location.getWorld() != null) {
-                for(Entity entity : location.getWorld().getNearbyEntities(location, 5.0, 5.0, 5.0)) {
+                for (Entity entity : location.getWorld().getNearbyEntities(location, 5.0, 5.0, 5.0)) {
                     if (entity instanceof ItemDisplay) {
                         entity.remove();
                         ++totalRemoved;
@@ -409,7 +414,7 @@ public class BeaconManager {
     public void forceRefreshAllDisplays() {
         int refreshed = 0;
 
-        for(BeaconSite beacon : this.beacons.values()) {
+        for (BeaconSite beacon : this.beacons.values()) {
             this.updateBeaconDisplay(beacon);
             ++refreshed;
         }
@@ -427,7 +432,7 @@ public class BeaconManager {
         this.plugin.getServer().getScheduler().runTaskLater(this.plugin, () -> {
             int created = 0;
 
-            for(BeaconSite beacon : this.beacons.values()) {
+            for (BeaconSite beacon : this.beacons.values()) {
                 this.createBeaconDisplay(beacon);
                 ++created;
             }
@@ -461,14 +466,14 @@ public class BeaconManager {
             } else {
                 ItemStack item = display.getItemStack();
 
-                if (item != null && item.getType() == Material.CARVED_PUMPKIN) {
+                if (item.getType() == Material.CARVED_PUMPKIN) {
                     ItemMeta meta = item.getItemMeta();
                     if (meta == null) {
                         info.append("  §cItem has no metadata!");
 
                     } else {
-                        CustomModelData cmdComponent = (CustomModelData)item.getData(DataComponentTypes.CUSTOM_MODEL_DATA);
-                        String actualCMD = cmdComponent != null && !cmdComponent.strings().isEmpty() ? (String)cmdComponent.strings().get(0) : "none";
+                        CustomModelData cmdComponent = item.getData(DataComponentTypes.CUSTOM_MODEL_DATA);
+                        String actualCMD = cmdComponent != null && !cmdComponent.strings().isEmpty() ? cmdComponent.strings().getFirst() : "none";
                         String expectedCMD = this.getCustomModelDataForState(beacon.getState());
                         info.append("  §7Actual CMD: §f").append(actualCMD);
 
@@ -478,10 +483,10 @@ public class BeaconManager {
                             info.append(" §a(Correct)");
                         }
 
-                        info.append("\n  §7Display Name: §f").append(meta.hasDisplayName() ? meta.getDisplayName() : "none");
+                        info.append("\n  §7Display Name: §f").append(meta.customName() != null ? PlainTextComponentSerializer.plainText().serialize(meta.customName()) : "none");
                     }
                 } else {
-                    info.append("  §cItem display has wrong item: §f").append(item != null ? item.getType() : "null");
+                    info.append("  §cItem display has wrong item: §f").append(item.getType());
                 }
             }
 
@@ -500,7 +505,7 @@ public class BeaconManager {
             BeaconSite nearestHolyBeacon = null;
             double nearestDistance = Double.MAX_VALUE;
 
-            for(BeaconSite beacon : this.beacons.values()) {
+            for (BeaconSite beacon : this.beacons.values()) {
                 if (beacon.getState() == BeaconState.HOLY) {
                     Location beaconLoc = beacon.getLocation();
 
@@ -533,7 +538,7 @@ public class BeaconManager {
             BeaconSite nearestHolyBeacon = null;
             double nearestDistance = Double.MAX_VALUE;
 
-            for(BeaconSite beacon : this.beacons.values()) {
+            for (BeaconSite beacon : this.beacons.values()) {
                 if (beacon.getState() == BeaconState.HOLY) {
                     Location beaconLoc = beacon.getLocation();
 
@@ -568,7 +573,7 @@ public class BeaconManager {
      * Show all passive beacon-affiliated particles to indicate the suppression and conversion circles.
      */
     private void showAllConversionAndSuppressionCircles() {
-        for(BeaconSite beacon : this.beacons.values()) {
+        for (BeaconSite beacon : this.beacons.values()) {
             Location particleLoc = beacon.getParticleLocation();
 
             if (particleLoc != null && particleLoc.getWorld() != null) {
@@ -739,15 +744,15 @@ public class BeaconManager {
                 this.plugin.logInfo("ETERNAL NIGHT LIFTED - Not all beacons are evil anymore!");
                 this.plugin.getSessionManager().setVampiresEternalNightActive(false);
 
-                for(Player player : Bukkit.getOnlinePlayers()) {
+                for (Player player : Bukkit.getOnlinePlayers()) {
                     if (this.plugin.getVampireManager().isHuman(player)) {
                         this.plugin.getEffectManager().removeEternalNightDarkness(player);
                     }
 
-                    player.sendMessage("§6A beacon has been reclaimed by the light... The eternal darkness recedes.");
+                    player.sendMessage(Component.text("A beacon has been reclaimed by the light... The eternal darkness recedes.", NamedTextColor.GOLD));
                 }
 
-                for(Player player : Bukkit.getOnlinePlayers()) {
+                for (Player player : Bukkit.getOnlinePlayers()) {
                     player.playSound(player.getLocation(), Sound.BLOCK_BEACON_POWER_SELECT, SoundCategory.MASTER, 1.0F, 1.0F);
                 }
             }
@@ -764,18 +769,28 @@ public class BeaconManager {
         if (!this.plugin.getSessionManager().isFirstBeaconConvertedTriggered()) {
             this.plugin.getSessionManager().setFirstBeaconConvertedTriggered(true);
             Location beaconLocation = beacon.getLocation();
-            String nearMessage, farMessage;
+            Component nearMessage, farMessage;
 
             if (isDesecration) {
-                nearMessage = "\n§4A cold dread washes over you as the beacon's light twists into something sinister. The air grows heavy with malice... \n§7But just as suddenly, you feel a faint warmth stirring within, as if a force of light is rising to oppose the darkness. Perhaps there is still hope...\n";
-                farMessage = "§4A dark beacon has been desecrated somewhere amongst the land, you feel its corrupted presence seep through the earth. \n§7But just as soon after, a faint warmth touches your heart, like a force of good is awakening to fight back. Probably just your imagination...\n";
+                nearMessage = Component.newline()
+                        .append(Component.text("A cold dread washes over you as the beacon's light twists into something sinister. The air grows heavy with malice...", NamedTextColor.DARK_RED)).append(Component.newline())
+                        .append(Component.text("But just as suddenly, you feel a faint warmth stirring within, as if a force of light is rising to oppose the darkness. Perhaps there is still hope...", NamedTextColor.GRAY)).append(Component.newline());
+
+                farMessage = Component.newline()
+                        .append(Component.text("A dark beacon has been desecrated somewhere amongst the land, you feel its corrupted presence seep through the earth.", NamedTextColor.DARK_RED)).append(Component.newline())
+                        .append(Component.text("But just as soon after, a faint warmth touches your heart, like a force of good is awakening to fight back. Probably just your imagination...", NamedTextColor.GRAY)).append(Component.newline());
 
             } else {
-                nearMessage = "\n§6The beacons soft light warms your heart, filling you with peace. \n§7But just as soon as it activates, the air around you seems to thicken, like a dark presence is moving to snuff out the light... Have you awoken an evil force? Perhaps it is just superstition...\n";
-                farMessage = "§6A holy beacon has been activated somewhere amongst the land, you feel its divine presence radiate through the earth. \n§7But just as soon after, a chill runs through your spine, like a strange dark force is moving in to snuff the light. Probably just your nerves...\n";
+                nearMessage = Component.newline()
+                        .append(Component.text("The beacons soft light warms your heart, filling you with peace.", NamedTextColor.GOLD)).append(Component.newline())
+                        .append(Component.text("But just as soon as it activates, the air around you seems to thicken, like a dark presence is moving to snuff out the light... Have you awoken an evil force? Perhaps it is just superstition...", NamedTextColor.GRAY)).append(Component.newline());
+
+                farMessage = Component.newline()
+                        .append(Component.text("A holy beacon has been activated somewhere amongst the land, you feel its divine presence radiate through the earth.", NamedTextColor.GOLD)).append(Component.newline())
+                        .append(Component.text("But just as soon after, a chill runs through your spine, like a strange dark force is moving in to snuff the light. Probably just your nerves...", NamedTextColor.GRAY)).append(Component.newline());
             }
 
-            for(Player player : Bukkit.getOnlinePlayers()) {
+            for (Player player : Bukkit.getOnlinePlayers()) {
                 player.playSound(player.getLocation(), Sound.ENTITY_WITHER_SPAWN, SoundCategory.MASTER, 0.8F, 0.7F);
                 player.addPotionEffect(new PotionEffect(PotionEffectType.DARKNESS, 60, 0, false, false));
 
@@ -902,15 +917,15 @@ public class BeaconManager {
             if (this.getHolyBeacons().size() < this.getAllBeacons().size()) {
                 this.plugin.logInfo("HUMANS FINAL STAND ENDED - Not all beacons are holy anymore!");
 
-                for(Player player : Bukkit.getOnlinePlayers()) {
+                for (Player player : Bukkit.getOnlinePlayers()) {
                     if (this.plugin.getVampireManager().isVampire(player)) {
                         this.plugin.getEffectManager().removeHumansFinalStandHealthReduction(player);
                     }
 
-                    player.sendMessage("§4A beacon has fallen to darkness... The humans' final stand wavers.");
+                    player.sendMessage(Component.text("A beacon has fallen to darkness... The humans' final stand wavers.", NamedTextColor.DARK_RED));
                 }
 
-                for(Player player : Bukkit.getOnlinePlayers()) {
+                for (Player player : Bukkit.getOnlinePlayers()) {
                     player.playSound(player.getLocation(), Sound.ENTITY_WITHER_AMBIENT, SoundCategory.MASTER, 1.0F, 0.8F);
                 }
 
@@ -931,7 +946,7 @@ public class BeaconManager {
      * Generate the team alignment particles around the beacons.
      */
     private void showBeaconParticles() {
-        for(BeaconSite beacon : this.beacons.values()) {
+        for (BeaconSite beacon : this.beacons.values()) {
             Location particleLoc = beacon.getParticleLocation();
 
             if (particleLoc != null && particleLoc.getWorld() != null && beacon.shouldShowParticles()) {
@@ -978,10 +993,10 @@ public class BeaconManager {
      * @param location the center of the particle spawns.
      */
     private void showHolyParticles(Location location) {
-        double radius = 1.5;
+        final double radius = 1.5;
 
-        for(int i = 0; i < 8; ++i) {
-            double angle = (Math.PI * 2D) * i / 8.0;
+        for (int i = 0; i < 8; ++i) {
+            double angle = (Math.PI * 2.0) * i / 8.0;
             Location particleLoc = location.clone().add(Math.cos(angle) * radius, Math.sin(System.currentTimeMillis() / 1000.0) * 0.3, Math.sin(angle) * radius);
             location.getWorld().spawnParticle(Particle.WHITE_ASH, particleLoc, 2, 0.1, 0.1, 0.1, 0.01);
         }
@@ -1001,10 +1016,10 @@ public class BeaconManager {
      */
     private void showDesecratedParticles(Location location) {
         location.getWorld().spawnParticle(Particle.LARGE_SMOKE, location, 3, 0.3, 0.1, 0.3, 0.02);
-        double radius = 1.2;
+        final double radius = 1.2;
 
-        for(int i = 0; i < 6; ++i) {
-            double angle = (Math.PI * 2D) * i / 6.0;
+        for (int i = 0; i < 6; ++i) {
+            double angle = (Math.PI * 2.0) * i / 6.0;
 
             Location particleLoc = location.clone().add(Math.cos(angle) * radius, -Math.sin(System.currentTimeMillis() / 800.0) * 0.2, Math.sin(angle) * radius);
             Particle.DustOptions dustOptions = new Particle.DustOptions(Color.fromRGB(139, 0, 0), 1.0F);
@@ -1028,16 +1043,14 @@ public class BeaconManager {
      */
     private void showConversionRangeCircle(BeaconSite beacon, Location center) {
         if (center != null && center.getWorld() != null) {
-            int circlePoints = 24;
-            double radius = BEACON_CONVERSION_RANGE;
-            long time = System.currentTimeMillis();
+            final int circlePoints = 24;
+            final long time = System.currentTimeMillis();
 
-            int currentPointIndex = (int)(time / 50L % (long)circlePoints);
-            double angle = (Math.PI * 2D) * (double)currentPointIndex / (double)circlePoints;
-            double rotationOffset = (double)time / 8000.0 % (Math.PI * 2D);
+            final int currentPointIndex = (int)(time / 50L % circlePoints);
+            double angle = (Math.PI * 2.0) * (double)currentPointIndex / circlePoints;
+            final double rotationOffset = time / 8000.0 % (Math.PI * 2.0);
             angle += rotationOffset;
-            double x = Math.cos(angle) * radius;
-            double z = Math.sin(angle) * radius;
+            final double x = Math.cos(angle) * BEACON_CONVERSION_RANGE, z = Math.sin(angle) * BEACON_CONVERSION_RANGE;
 
             Location circlePoint = center.clone().add(x, -1.2, z);
             this.showConversionRangeParticle(beacon.getState(), circlePoint);
@@ -1054,15 +1067,14 @@ public class BeaconManager {
      */
     private void showSuppressionRangeCircle(BeaconSite beacon, Location center) {
         if (center != null && center.getWorld() != null) {
-            int circlePoints = 48;
-            double radius = HOLY_SUPPRESSION_RANGE;
-            long time = System.currentTimeMillis();
+            final int circlePoints = 48;
+            final long time = System.currentTimeMillis();
 
-            int currentPointIndex = (int)(time / 50L % (long)circlePoints);
-            double angle = (Math.PI * 2D) * currentPointIndex / (double)circlePoints;
-            double rotationOffset = time / 12000.0 % (Math.PI * 2D);
+            final int currentPointIndex = (int)(time / 50L % (long)circlePoints);
+            double angle = (Math.PI * 2.0) * currentPointIndex / (double)circlePoints;
+            final double rotationOffset = time / 12000.0 % (Math.PI * 2.0);
             angle += rotationOffset;
-            double x = Math.cos(angle) * radius, z = Math.sin(angle) * radius;
+            final double x = Math.cos(angle) * HOLY_SUPPRESSION_RANGE, z = Math.sin(angle) * HOLY_SUPPRESSION_RANGE;
 
             Location circlePoint = center.clone().add(x, 0.0, z);
             Location highestPoint = this.plugin.getWorld().getHighestBlockAt(circlePoint).getLocation();
@@ -1086,7 +1098,7 @@ public class BeaconManager {
             int maxY = location.getWorld().getMaxHeight() - 1;
             int minY = location.getWorld().getMinHeight();
 
-            for(int y = maxY; y >= minY; --y) {
+            for (int y = maxY; y >= minY; --y) {
                 highest.setY(y);
                 Material blockType = highest.getBlock().getType();
 
@@ -1129,7 +1141,7 @@ public class BeaconManager {
     /**
      * Spawn a particle for the beacon's suppression range.
      *
-     * @param location
+     * @param location The location of a particle indicating the edge of the holy beacon's suppression range.
      */
     private void showSuppressionRangeParticle(Location location) {
         if (location != null && location.getWorld() != null) {
@@ -1144,13 +1156,13 @@ public class BeaconManager {
     /**
      * Return the highest solid block within 5 vertical blocks of the location.
      *
-     * @param location a location.
+     * @param location a location with ground beneath it.
      * @return A location of the first solid block at or under (within 5 blocks) the location.
      */
     private Location findGroundLevel(Location location) {
         Location ground = location.clone();
 
-        for(int y = 0; y >= -5; --y) {
+        for (int y = 0; y >= -5; --y) {
             ground.setY(location.getY() + y);
 
             if (ground.getBlock().getType().isSolid()) {
@@ -1171,7 +1183,7 @@ public class BeaconManager {
     public List<BeaconSite> getBeaconsInRange(Location location, double range) {
         List<BeaconSite> nearby = new ArrayList<>();
 
-        for(BeaconSite beacon : this.beacons.values()) {
+        for (BeaconSite beacon : this.beacons.values()) {
             Location beaconLoc = beacon.getLocation();
 
             if (beaconLoc != null && beaconLoc.getWorld().equals(location.getWorld()) && beaconLoc.distance(location) <= range) {
@@ -1193,7 +1205,7 @@ public class BeaconManager {
             BeaconSite closestHolyBeacon = null;
             double closestDistance = Double.MAX_VALUE;
 
-            for(BeaconSite beacon : this.beacons.values()) {
+            for (BeaconSite beacon : this.beacons.values()) {
                 if (beacon.getState() == BeaconState.HOLY) {
                     Location beaconLoc = beacon.getLocation();
 
@@ -1221,9 +1233,9 @@ public class BeaconManager {
      */
     public List<String> getBeaconList() {
         List<String> list = new ArrayList<>();
+
         if (this.beacons.isEmpty()) {
             list.add("§7No beacons configured.");
-            return list;
 
         } else {
             list.add("§6§l=== BEACON SITES ===");
@@ -1231,15 +1243,15 @@ public class BeaconManager {
             list.add("");
             Map<BeaconSite.BeaconState, List<BeaconSite>> grouped = new HashMap<>();
 
-            for(BeaconSite.BeaconState state : BeaconState.values()) {
+            for (BeaconSite.BeaconState state : BeaconState.values()) {
                 grouped.put(state, new ArrayList<>());
             }
 
-            for(BeaconSite beacon : this.beacons.values()) {
+            for (BeaconSite beacon : this.beacons.values()) {
                 (grouped.get(beacon.getState())).add(beacon);
             }
 
-            for(BeaconSite.BeaconState state : BeaconState.values()) {
+            for (BeaconSite.BeaconState state : BeaconState.values()) {
                 List<BeaconSite> stateBeacons = grouped.get(state);
 
                 if (!stateBeacons.isEmpty()) {
@@ -1249,29 +1261,33 @@ public class BeaconManager {
                         case HOLY:
                             icon = "✦ ";
                             break;
+
                         case DESECRATED:
                             icon = "☠ ";
+
                         case PERMANENTLY_DESECRATED:
                             break;
+
                         case NEUTRAL:
                             icon = "◯ ";
                             break;
+
                         default:
                             break;
                     }
 
                     list.add(state.getColorCode() + "§l" + icon + state.getDisplayName() + " Beacons: §r§7(" + stateBeacons.size() + ")");
 
-                    for(BeaconSite beacon : stateBeacons) {
-                        list.add("  " + beacon.getStatusString().replace("\n", "\n  "));
+                    for (BeaconSite beacon : stateBeacons) {
+                        list.add("  " + beacon.getStatusString(this.plugin.getSessionManager()).replace("\n", "\n  "));
                     }
 
                     list.add("");
                 }
             }
-
-            return list;
         }
+
+        return list;
     }
 
     /**
@@ -1282,7 +1298,7 @@ public class BeaconManager {
             try {
                 this.plugin.getLogger().fine("Saving " + this.beacons.size() + " beacons to file...");
 
-                for(Map.Entry<String, BeaconSite> entry : this.beacons.entrySet()) {
+                for (Map.Entry<String, BeaconSite> entry : this.beacons.entrySet()) {
                     BeaconSite beacon = entry.getValue();
 
                     if (beacon == null) {
@@ -1455,19 +1471,22 @@ public class BeaconManager {
                         }
                     }
 
-                    Type type = (new TypeToken<Map<String, BeaconSite>>() {
-                    }).getType();
+                    Type type = (new TypeToken<Map<String, BeaconSite>>() {}).getType();
                     Map<String, BeaconSite> loadedBeacons = this.gson.fromJson(fileContent, type);
+
                     if (loadedBeacons != null) {
                         int validBeacons = 0, invalidBeacons = 0;
 
-                        for(Map.Entry<String, BeaconSite> entry : loadedBeacons.entrySet()) {
+                        for (Map.Entry<String, BeaconSite> entry : loadedBeacons.entrySet()) {
                             BeaconSite beacon = entry.getValue();
+
                             if (beacon == null) {
                                 this.plugin.getLogger().warning("Beacon with key '" + entry.getKey() + "' is null");
                                 ++invalidBeacons;
+
                             } else if (beacon.getName() != null && beacon.getWorldName() != null) {
                                 ++validBeacons;
+
                             } else {
                                 this.plugin.getLogger().warning("Beacon '" + entry.getKey() + "' has null fields");
                                 ++invalidBeacons;
@@ -1477,6 +1496,7 @@ public class BeaconManager {
                         this.beacons.clear();
                         this.beacons.putAll(loadedBeacons);
 
+                        // Refresh the beacon displays
                         this.plugin.getServer().getScheduler().runTaskLater(this.plugin, () -> {
                             this.recreateAllDisplays();
                             this.validateDisplays();
@@ -1488,8 +1508,6 @@ public class BeaconManager {
 
                     this.plugin.getLogger().severe("Gson returned null when parsing beacons file!");
                 }
-
-                return;
 
             } catch (IOException e) {
                 this.plugin.getLogger().severe("Failed to load beacons: " + e.getMessage());
@@ -1531,16 +1549,16 @@ public class BeaconManager {
      */
     private void migrateBeaconCooldownsToSessionTime() {
         this.plugin.logInfo("Migrating existing beacon cooldowns from system time to session time...");
-        long currentSystemTime = System.currentTimeMillis();
-        long currentSessionTime = this.plugin.getSessionManager().getSessionTime();
+        final long currentSystemTime = System.currentTimeMillis();
+        final long currentSessionTime = this.plugin.getSessionManager().getSessionTime();
         int migratedBeacons = 0;
 
-        for(BeaconSite beacon : this.beacons.values()) {
+        for (BeaconSite beacon : this.beacons.values()) {
             long systemCooldownUntil = beacon.getConversionCooldownUntil();
 
             if (systemCooldownUntil > currentSystemTime) {
-                long remainingSystemTime = systemCooldownUntil - currentSystemTime;
-                long newSessionCooldownUntil = currentSessionTime + remainingSystemTime / 2L;
+                final long remainingSystemTime = systemCooldownUntil - currentSystemTime;
+                final long newSessionCooldownUntil = currentSessionTime + remainingSystemTime / 2L;
                 beacon.setConversionCooldownUntil(newSessionCooldownUntil);
                 ++migratedBeacons;
             }
@@ -1562,12 +1580,12 @@ public class BeaconManager {
         Map<BeaconSite.BeaconState, Integer> stats = new HashMap<>();
 
         // Set the number of each alignment to 0
-        for(BeaconSite.BeaconState state : BeaconState.values()) {
+        for (BeaconSite.BeaconState state : BeaconState.values()) {
             stats.put(state, 0);
         }
 
         // Increment the alignment's counter when a beacon is found to match it
-        for(BeaconSite beacon : this.beacons.values()) {
+        for (BeaconSite beacon : this.beacons.values()) {
             stats.put(beacon.getState(), stats.get(beacon.getState()) + 1);
         }
 
@@ -1580,7 +1598,7 @@ public class BeaconManager {
     public void validateBeacons() {
         List<String> invalidBeacons = new ArrayList<>();
 
-        for(Map.Entry<String, BeaconSite> entry : this.beacons.entrySet()) {
+        for (Map.Entry<String, BeaconSite> entry : this.beacons.entrySet()) {
             if ((entry.getValue()).getLocation() == null) {
                 invalidBeacons.add(entry.getKey());
             }
@@ -1589,7 +1607,7 @@ public class BeaconManager {
         if (!invalidBeacons.isEmpty()) {
             this.plugin.getLogger().warning("Found " + invalidBeacons.size() + " beacons with invalid worlds:");
 
-            for(String name : invalidBeacons) {
+            for (String name : invalidBeacons) {
                 this.plugin.getLogger().warning("  - " + name + " (world: " + (this.beacons.get(name)).getWorldName() + ")");
             }
         }
@@ -1637,7 +1655,7 @@ public class BeaconManager {
             this.plugin.logInfo("Stopped holy beacon regeneration task");
         }
 
-        for(BukkitTask task : this.pendingNeutralBroadcasts.values()) {
+        for (BukkitTask task : this.pendingNeutralBroadcasts.values()) {
             if (task != null) {
                 task.cancel();
             }
@@ -1663,16 +1681,19 @@ public class BeaconManager {
 
         BukkitTask task = this.plugin.getServer().getScheduler().runTaskLater(this.plugin, () -> {
             if (beacon.getState() == BeaconState.NEUTRAL) {
-                String message;
+                Component message = Component.text("Beacon", NamedTextColor.GRAY)
+                        .append(Component.text(beacon.getName(), NamedTextColor.YELLOW));
+
+                // Add on a description based on the beacon's previous state
                 if (previousState == BeaconState.HOLY) {
-                    message = "§7Beacon §e" + beacon.getName() + " §7has lost its divine protection...";
+                    message = message.append(Component.text("has lost its divine protection...", NamedTextColor.GRAY));
                 } else if (previousState == BeaconState.DESECRATED) {
-                    message = "§7Beacon §e" + beacon.getName() + " §7has been cleansed of dark influence...";
+                    message = message.append(Component.text("has been cleansed of dark influence...", NamedTextColor.GRAY));
                 } else {
-                    message = "§7Beacon §e" + beacon.getName() + " §7is now neutral.";
+                    message = message.append(Component.text("is now neutral.", NamedTextColor.GRAY));
                 }
 
-                for(Player player : this.plugin.getServer().getOnlinePlayers()) {
+                for (Player player : this.plugin.getServer().getOnlinePlayers()) {
                     player.sendMessage(message);
                 }
             }
@@ -1704,17 +1725,21 @@ public class BeaconManager {
      * @param newState the beacon's new alignment.
      */
     private void broadcastBeaconGainToTeam(BeaconSite beacon, BeaconSite.BeaconState newState) {
-        String message;
+        Component message;
 
         if (newState == BeaconState.HOLY) {
-            message = "§aBeacon §e" + beacon.getName() + " §ahas been blessed with divine energy!";
+            message = Component.text("Beacon ", NamedTextColor.GREEN)
+                    .append(Component.text( beacon.getName(), NamedTextColor.YELLOW))
+                    .append(Component.text(" has been blessed with divine energy!", NamedTextColor.GREEN));
         } else if (newState == BeaconState.DESECRATED) {
-            message = "§4Beacon §e" + beacon.getName() + " §4has been consumed by dark forces!";
+            message = Component.text("Beacon ", NamedTextColor.DARK_RED)
+                    .append(Component.text( beacon.getName(), NamedTextColor.YELLOW))
+                    .append(Component.text(" has been consumed by dark forces!", NamedTextColor.DARK_RED));
         } else {
             return;
         }
 
-        for(Player player : this.plugin.getServer().getOnlinePlayers()) {
+        for (Player player : this.plugin.getServer().getOnlinePlayers()) {
             player.sendMessage(message);
         }
     }
@@ -1726,7 +1751,7 @@ public class BeaconManager {
         if (!this.beacons.isEmpty()) {
             boolean allDesecrated = true, allHoly = true;
 
-            for(BeaconSite beacon : this.beacons.values()) {
+            for (BeaconSite beacon : this.beacons.values()) {
                 if (beacon.getState() != BeaconState.DESECRATED && beacon.getState() != BeaconState.PERMANENTLY_DESECRATED) {
                     allDesecrated = false;
                 }
@@ -1739,21 +1764,22 @@ public class BeaconManager {
             if (allDesecrated) {
                 boolean humansRemain = false;
 
-                for(Player player : this.plugin.getServer().getOnlinePlayers()) {
+                for (Player player : this.plugin.getServer().getOnlinePlayers()) {
                     if (player.getGameMode() == GameMode.SURVIVAL && this.plugin.getVampireManager().isHuman(player)) {
                         humansRemain = true;
                         break;
                     }
                 }
 
-                String message;
+                Component message;
+
                 if (humansRemain) {
-                    message = "§cBut while humans remain... Hope still stands...";
+                    message = Component.text("But while humans remain... Hope still stands...", NamedTextColor.RED);
                 } else {
-                    message = "§cYou are free of your chains, creatures of the night...";
+                    message = Component.text("You are free of your chains, creatures of the night...", NamedTextColor.RED);
                 }
 
-                for(Player player : this.plugin.getServer().getOnlinePlayers()) {
+                for (Player player : this.plugin.getServer().getOnlinePlayers()) {
                     if (this.plugin.getVampireManager().isVampire(player)) {
                         player.sendMessage(message);
                     }
@@ -1761,7 +1787,7 @@ public class BeaconManager {
             } else if (allHoly) {
                 boolean vampiresRemain = false;
 
-                for(Player player : this.plugin.getServer().getOnlinePlayers()) {
+                for (Player player : this.plugin.getServer().getOnlinePlayers()) {
                     if (player.getGameMode() == GameMode.SURVIVAL && this.plugin.getVampireManager().isVampire(player)) {
                         vampiresRemain = true;
                         break;
@@ -1769,26 +1795,48 @@ public class BeaconManager {
                 }
 
                 if (vampiresRemain) {
-                    for(Player player : this.plugin.getServer().getOnlinePlayers()) {
+                    Component message = Component.text("But while vampires remain... Now only the vampires lie between you and freedom...", NamedTextColor.GREEN);
+
+                    for (Player player : this.plugin.getServer().getOnlinePlayers()) {
                         if (this.plugin.getVampireManager().isHuman(player)) {
-                            player.sendMessage("§aBut while vampires remain... Now only the vampires lie between you and freedom...");
+                            player.sendMessage(message);
                         }
                     }
                 } else {
-                    String townName = plugin.getConfigManager().getTownName();
+                    final String townName = plugin.getConfigManager().getTownName();
 
-                    for(Player player : this.plugin.getServer().getOnlinePlayers()) {
+                    final Title defeatTitle = Title.title(
+                            Component.text("DEFEAT", NamedTextColor.RED)
+                                    .decorate(TextDecoration.BOLD),
+                            Component.text("The light has prevailed", NamedTextColor.GRAY),
+                            Title.Times.times(
+                                    Duration.ofSeconds(1),
+                                    Duration.ofSeconds(5),
+                                    Duration.ofSeconds(2)
+                            ));
+                    final Title victoryTitle = Title.title(
+                            Component.text("VICTORY", NamedTextColor.GREEN)
+                                    .decorate(TextDecoration.BOLD),
+                            Component.text("The darkness has been vanquished", NamedTextColor.YELLOW),
+                            Title.Times.times(
+                                    Duration.ofSeconds(1),
+                                    Duration.ofSeconds(5),
+                                    Duration.ofSeconds(2)
+                            )
+                    );
+
+                    for (Player player : this.plugin.getServer().getOnlinePlayers()) {
                         if (this.plugin.getVampireManager().isVampire(player)) {
-                            player.sendTitle("§c§lDEFEAT", "§7The light has prevailed", 20, 100, 40);
+                            player.showTitle(defeatTitle);
                             player.sendMessage("");
-                            player.sendMessage("§cAll beacons shine with divine light...");
-                            player.sendMessage("§cLight reigns supreme over " + townName + ". You have lost.");
+                            player.sendMessage(Component.text("All beacons shine with divine light...", NamedTextColor.RED));
+                            player.sendMessage(Component.text("Light reigns supreme over " + townName + ". You have lost.", NamedTextColor.RED));
 
                         } else {
-                            player.sendTitle("§a§lVICTORY", "§eThe darkness has been vanquished", 20, 100, 40);
+                            player.showTitle(victoryTitle);
                             player.sendMessage("");
-                            player.sendMessage("§aAll beacons shine with divine light...");
-                            player.sendMessage("§aLight reigns supreme over " + townName + ". You are free.");
+                            player.sendMessage(Component.text("All beacons shine with divine light...", NamedTextColor.GREEN));
+                            player.sendMessage(Component.text("Light reigns supreme over " + townName + ". You are free.", NamedTextColor.GREEN));
                         }
 
                         player.sendMessage("");
